Update backend dockerfile

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,11 +1,11 @@
-FROM registry.access.redhat.com/ubi8/ubi:8.4 AS builder
+FROM registry.access.redhat.com/ubi8/ubi:8.5 AS builder
 RUN dnf install -y golang && dnf clean all
-WORKDIR /go/src/github.com/vrutkovs/k8s-podhunt
-COPY . .
-RUN go mod vendor && go build -o ./k8s-podhunt .
+WORKDIR /go/src/github.com/vrutkovs/cluster-ninja
+COPY backend/ .
+RUN go mod vendor && go build -o ./cluster-ninja .
 
 
-FROM registry.access.redhat.com/ubi8/ubi-minimal:8.4
-COPY --from=builder /go/src/github.com/vrutkovs/k8s-podhunt/k8s-podhunt /bin/k8s-podhunt
+FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
+COPY --from=builder /go/src/github.com/vrutkovs/cluster-ninja/cluster-ninja /bin/cluster-ninja
 WORKDIR /srv
-ENTRYPOINT ["/bin/k8s-podhunt"]
+ENTRYPOINT ["/bin/cluster-ninja"]
