--- a/manifests/02-imagestream.yaml
+++ b/manifests/02-imagestream.yaml
@@ -1,22 +1,18 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: hunt-backend
-  namespace: pod-hunt
+  name: cluster-ninja
   labels:
-    app: hunt-backend
+    app: cluster-ninja
 spec:
   lookupPolicy:
     local: false
   tags:
   - importPolicy: {}
-    name: latest
+    name: backend
     referencePolicy:
       type: Source
   - importPolicy: {}
-    from:
-      kind: DockerImage
-      name: registry.access.redhat.com/ubi8/ubi
-    name: ubi8
+    name: frontend
     referencePolicy:
       type: Source
