--- a/manifests/05-service-frontend.yaml
+++ b/manifests/05-service-frontend.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
-  namespace: pod-hunt
+  name: frontend
 spec:
   selector:
-    app: hunt-backend
+    app: cluster-ninja
+    component: frontend
   ports:
     - protocol: TCP
       port: 8080
