--- a/gitops/apps/argocd/application-cluster-ninja.yaml
+++ b/gitops/apps/argocd/application-cluster-ninja.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: pod-hunt
+    namespace: cluster-ninja
     server: 'https://kubernetes.default.svc'
   project: default
   source:
