--- a/manifests/07-ingress.yaml
+++ b/manifests/07-ingress.yaml
@@ -6,19 +6,20 @@ metadata:
     route.openshift.io/termination: edge
 spec:
   rules:
-  - hosts: foo.bar.com
+  - host: foo.bar.com
     http:
       paths:
       - backend:
-          serviceName: frontend
-          servicePort: 8080
+          service:
+            name: frontend
+            port:
+              number: 8080
         path: /
         pathType: Prefix
       - backend:
-          serviceName: backend
-          servicePort: 8080
+          service:
+            name: backend
+            port:
+              number: 8080
         path: /api
         pathType: Prefix
-  tls:
-  - hosts:
-    - foo.bar.com
