--- a/manifests/10-privileged-pipeline.yaml
+++ b/manifests/10-privileged-pipeline.yaml
@@ -5,6 +5,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: pipeline
+    namespace: cluster-ninja
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
