Set correct deployment names

--- a/manifests/03-deployment-frontend.yaml
+++ b/manifests/03-deployment-frontend.yaml
@@ -9,7 +9,7 @@ metadata:
   labels:
     app: cluster-ninja
     component: frontend
-  name: cluster-ninja
+  name: frontend
 spec:
   replicas: 1
   selector:
