manifests/11-run-pipeline-on-sync.yaml: build code from main on sync

--- a/manifests/11-run-pipeline-on-sync.yaml
+++ b/manifests/11-run-pipeline-on-sync.yaml
@@ -16,5 +16,8 @@ spec:
           - pipeline
           - start
           - build-pipeline
+          - --workspace name=source,emptyDir=""
+          - --param gitUrl=https://github.com/vrutkovs/cluster-ninja.git
+          - --param gitRevision=main
       serviceAccountName: pipeline
       restartPolicy: OnFailure
