manifests/09-pipeline.yaml: all params are strings

--- a/manifests/09-pipeline.yaml
+++ b/manifests/09-pipeline.yaml
@@ -9,11 +9,14 @@ spec:
   params:
     - name: gitUrl
       description: Git repository url
+      type: string
     - name: gitRevision
       description: Git revision to check out
+      type: string
       default: main
     - name: namespace
       description: Namespace to push images to
+      type: string
       default: cluster-ninja
   tasks:
     - name: clone-repo
