--- a/manifests/09-pipeline.yaml
+++ b/manifests/09-pipeline.yaml
@@ -22,6 +22,7 @@ spec:
     - name: clone-repo
       taskRef:
         name: git-clone
+        kind: ClusterTask
       workspaces:
         - name: output
           workspace: source
@@ -37,6 +38,7 @@ spec:
     - name: build-backend
       taskRef:
         name: buildah
+        kind: ClusterTask
       runAfter:
         - clone-repo
       params:
@@ -52,6 +54,7 @@ spec:
     - name: wait-for-backend-rollout
       taskRef:
         name: openshift-client
+        kind: ClusterTask
       params:
       - name: ARGS
         value: |
@@ -61,6 +64,7 @@ spec:
     - name: build-frontend
       taskRef:
         name: buildah
+        kind: ClusterTask
       runAfter:
         - clone-repo
       params:
@@ -76,6 +80,7 @@ spec:
     - name: wait-for-frontend-rollout
       taskRef:
         name: openshift-client
+        kind: ClusterTask
       params:
       - name: ARGS
         value: |
