Use PVC for workspace

--- a/manifests/11-run-pipeline-on-sync.yaml
+++ b/manifests/11-run-pipeline-on-sync.yaml
@@ -17,7 +17,7 @@ spec:
           - start
           - build-pipeline
           - --workspace
-          - name=source,emptyDir=""
+          - name=source,claimName=builds
           - --param
           - namespace=cluster-ninja
           - --param
