--- a/manifests/04-deployment-backend.yaml
+++ b/manifests/04-deployment-backend.yaml
@@ -38,8 +38,4 @@ spec:
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
+      serviceAccount: ripper
