gitops/apps/argocd/application-cluster-ninja.yaml: enable self-heal if we kill the frontend

--- a/gitops/apps/argocd/application-cluster-ninja.yaml
+++ b/gitops/apps/argocd/application-cluster-ninja.yaml
@@ -13,7 +13,8 @@ spec:
     repoURL: 'https://github.com/vrutkovs/cluster-ninja'
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
   ignoreDifferences:
