Reencrypt ArgoCD route

--- a/gitops/bootstrap/argocd-settings.yaml
+++ b/gitops/bootstrap/argocd-settings.yaml
@@ -13,7 +13,7 @@ spec:
       path: /
       tls:
         insecureEdgeTerminationPolicy: Redirect
-        termination: edge
+        termination: reencrypt
       wildcardPolicy: None
     insecure: false
     resources: {}
