manifests/12-run-pipeline-on-sync.yaml: wait for pipeline to complete in postSync

--- a/manifests/12-run-pipeline-on-sync.yaml
+++ b/manifests/12-run-pipeline-on-sync.yaml
@@ -24,5 +24,6 @@ spec:
           - gitUrl=https://github.com/vrutkovs/cluster-ninja.git
           - --param
           - gitRevision=main
+          - --showlog
       serviceAccountName: pipeline
       restartPolicy: OnFailure
