--- a/manifests/09-pipeline.yaml
+++ b/manifests/09-pipeline.yaml
@@ -35,12 +35,27 @@ spec:
           value: "src"
         - name: deleteExisting
           value: "true"
+    - name: prepare-go-cache
+      taskRef:
+        name: openshift-client
+        kind: ClusterTask
+      workspaces:
+        - name: manifest-dir
+          workspace: source
+      runAfter:
+        - clone-repo
+      params:
+      - name: VERSION
+        value: latest
+      - name: SCRIPT
+        value: |
+          mkdir -p /workspace/manifest-dir/go
     - name: build-backend
       taskRef:
         name: buildah
         kind: ClusterTask
       runAfter:
-        - clone-repo
+        - prepare-go-cache
       params:
         - name: IMAGE
           value: 'image-registry.openshift-image-registry.svc:5000/$(params.namespace)/cluster-ninja:backend'
@@ -50,6 +65,8 @@ spec:
           value: src/Dockerfile.backend
         - name: CONTEXT
           value: src
+        - name: BUILD_EXTRA_ARGS
+          value: "-v $(pwd)/go:/go/pkg/mod"
       workspaces:
         - name: source
           workspace: source
