--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -2,7 +2,7 @@ FROM registry.access.redhat.com/ubi8/go-toolset:1.16.12 AS builder
 ENV GOPATH /go
 WORKDIR /go/src/github.com/vrutkovs/cluster-ninja
 COPY backend/ .
-RUN go mod vendor && go build ./cmd/cluster-ninja/
+RUN go build ./cmd/cluster-ninja/
 
 
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.5
