--- a/manifests/09-pipeline.yaml
+++ b/manifests/09-pipeline.yaml
@@ -66,7 +66,7 @@ spec:
         - name: CONTEXT
           value: src
         - name: BUILD_EXTRA_ARGS
-          value: "-v $(pwd)/go:/go/pkg/mod"
+          value: "-v $(pwd)/go:/go/pkg/mod:Z"
       workspaces:
         - name: source
           workspace: source
